tests/Fixtures/Torture/Bad/dup_param.g
// EXPECT G003
kernel { entry func Main() { } }
int func f(int x, int x) { return x; }
